k8s/manifests-6b878e/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-6b878e
  namespace: journee
  labels:
    app: journee-6b878e
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-6b878e
  template:
    metadata:
      labels:
        app: journee-6b878e
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-6b878e
          image: gcr.io/my-docker-471807/journee:6b878e-22d795
          ports:
            - containerPort: 3000
