k8s/manifests-6b878e/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-6b878e
  namespace: journee
spec:
  selector:
    app: journee-6b878e
  ports:
    - port: 80
      targetPort: 3000
